<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_20"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_recipe_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_recipe_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/title"
            android:textSize="@dimen/sp_16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_recipe_rating"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="2"
            android:ems="10"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/rating"
            android:textSize="@dimen/sp_13" />

        <CheckBox
            android:id="@+id/checkbox_recipe_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:buttonTint="@color/black"
            android:text="@string/save"
            android:textSize="@dimen/sp_16" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>