<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:background="@drawable/border"
        android:inputType="text"
        app:defaultQueryHint="@string/search_here"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/horizontalScrollViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAllRecipes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/all_recipes"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="150dp"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/border"
        android:text="@string/clear"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textAllRecipes"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewButton" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewRecipeList"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_4"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/noDataImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/no_data_found"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/noInternetConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/no_internet"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
